Mar 02, 2013 - chris ---------------------------------------------------
o Fixed JDK include paths on MacOS (Thanks, Mark Sutheran)

Feb 28, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.0

Jan 04, 2013 - chris ---------------------------------------------------
o Extended keys are now disabled by default; use HAM_ENABLE_EXTENDED_KEYS to
	enable them

Dec 26, 2012 - chris ---------------------------------------------------
o In-Memory Environments now support Transactions

Dec 25, 2012 - chris ---------------------------------------------------
o Renamed the C++ namespace from "ham" to "hamsterdb"

Dec 23, 2012 - chris ---------------------------------------------------
o Removed the deprecated flag HAM_NOT_INITIALIZED

Dec 20, 2012 - chris ---------------------------------------------------
o Removed the deprecated flag HAM_LOCK_EXCLUSIVE
o Renamed ham_check_integrity to ham_db_check_integrity

Dec 19, 2012 - chris ---------------------------------------------------
o Removed the flag HAM_USE_BTREE; it was not required.

Dec 18, 2012 - chris ---------------------------------------------------
o Removed HAM_FAST_ESTIMATE and improved performance of ham_db_get_key_count
	if use of duplicate keys are disabled

Dec 18, 2012 - chris ---------------------------------------------------
o Added two new tools: ham_export to export a database into a binary format,
	ham_import to create an Environment from the exported data (or to merge
	the data into an existing Environment). ham_export is linked statically.
	ham_export/ham_import will provide an upgrade path for newer hamsterdb
	versions.

Dec 17, 2012 - chris ---------------------------------------------------
o Applied patch with many automake/autoconf related cleanups (thanks,
	Daniel Richard G. <skunk@iskunk.org>)

Dec 13, 2012 - chris ---------------------------------------------------